--- a/main.css
+++ b/main.css
@@ -6,6 +6,11 @@ html {
   scroll-behavior: smooth;
 }
 
+html,
+body {
+  overflow-x: hidden;
+}
+
 .wave-container {
   height: 95vh;
   background-color: #ff9a8b;
